modules/gdscript/tests/scripts/analyzer/errors/assign_null_to_int.gd
func test():
	var a: int = null
